# pyproject.toml
[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twine"
authors = [
	{ name = "Donald Stufft and individual contributors", email = "donald@stufft.io" },
]
description = "Collection of utilities for publishing packages on PyPI"
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Natural Language :: English",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: BSD",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dependencies = [
	"pkginfo >= 1.8.1",
	"readme-renderer >= 35.0",
	"requests >= 2.20",
	"requests-toolbelt >= 0.8.0, != 0.9.0",
	"urllib3 >= 1.26.0",
	"importlib-metadata >= 3.6",
	"keyring >= 15.1",
	"rfc3986 >= 1.4.0",
	"rich >= 12.0.0",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://twine.readthedocs.io/"
Source = "https://github.com/pypa/twine/"
Documentation = "https://twine.readthedocs.io/en/latest/"
"Packaging tutorial" = "https://packaging.python.org/tutorials/packaging-projects/"

[project.entry-points."twine.registered_commands"]
check = "twine.commands.check:main"
upload = "twine.commands.upload:main"
register = "twine.commands.register:main"

[project.scripts]
twine = "twine.__main__:main"

[tool.setuptools]
packages = [
	"twine",
	"twine.commands",
]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools_scm]

[tool.towncrier]
package = "twine"
filename = "docs/changelog.rst"
directory = "changelog"
issue_format = "`#{issue} <https://github.com/pypa/twine/issues/{issue}>`_"
underlines = ["-", "^"]

[tool.ruff]
include = ["twine"]
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
    "NPY",
    "PD",
    "PYI",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "PLR",     # Complexity things.
    "ANN101",  # Type of Self for self is implicit.
    "ANN102",  # Type of type[Self] for cls is implicit.
    "ANN204",  # Special method return types are known by type checkers.
    "ANN401",  # Need to use Any for some places.
    # Recommended ignores by ruff when using ruff format.
    "COM812",
    "COM819",
    "E501",
    "ISC001",
    "Q003",
    # == Others for existing codebase.
    "BLE001", # Catch Exception.
	"RET505", # Allow elif after return.
	"RET506",
    # Exception messages.
    "TRY003",
    "EM101",
    "EM102",
    # Shadowing builtin names.
    "A002",
    # pathlib.Path stuff. Maintain os.path usage.
    "PTH100",
    "PTH110",
    "PTH111",
    "PTH119",
    "PTH123",
    "PTH202",
    "PTH207",
]

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]
default-section = "third-party"
known-third-party = ["build"]
known-first-party = ["twine", "helpers"]

[tool.pyright]
include = ["twine"]
ignore = ["tests"]
pythonVersion = "3.8"
typeCheckingMode = "strict"

reportPrivateUsage = "none"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
